--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,47 @@
-header{
-    background-color :black;
-    height: 80px;
+body {
+  font-family: Helvetica, sans-serif;
+  background: #FFF;
+}
+
+header {
+  background: #444;
+  height: 100px;
 }
 nav {
-    width: 960px;
-    margin: 0 auto;
-  }
-  nav img {
-    float: left;
-    margin-top: 15px;
-    margin-right: 30px;
-  }
-  nav li {
-    float: left;
-    margin-top: 40px;
-    margin-right: 50px;
-    color: whitesmoke;
-  }
-  main {
-    width: 960px;
-    margin: 0 auto;
-  }
-  div.photo-one{
-    margin-top: 25px;
-  }
-  
-  div.small-photos{
-    margin-top: 25px;
-  }
-  div.small-photos> img {
-    margin-right: 30px;
-    float: left;
-  }
-  div.small-photos > img:last-child {
-    margin-right: 0px;
-  }
+  width: 960px;
+  margin: 0 auto;
+}
+nav img {
+  float: left;
+  margin-top: 15px;
+  margin-right: 30px;
+}
+nav li {
+  float: left;
+  margin-top: 40px;
+  margin-right: 40px;
+  color: #bbbbbb;
+}
+
+main {
+  width: 960px;
+  margin: 0 auto;
+}
+div.hero {
+  margin-top: 25px;
+}
+
+div.cards {
+  margin-top: 25px;
+}
+div.cards > img {
+  margin-right: 30px;
+  float: left;
+}
+div.cards > img:last-child {
+  margin-right: 0px;
+}
+
 div.section {
   float: left;
   margin-top: 25px;
@@ -56,16 +63,21 @@ div.section h1 {
 div.section p {
   padding-bottom: 15px;
 }
-/* W3schools */
 div.section button {
   border: none;
-  background: black;
+  background: #000;
   padding: 8px 30px;
-  color:yellow;
+  color: #FFF;
   font-weight: 700;
 }
 div.section button:hover {
-  background: green;
+  background: blue;
   transition-delay: 350ms;
 }
 
+body footer {
+  clear: left;
+  height: 200px;
+  background: #444;
+  z-index: 0;
+}
